# fin_advisor

./: .env  README.md  brokerage.py  main.py  portfolio.json  pyproject.toml  run_advisor.py
